<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_shape_update_version_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_avatar" />

        <EditText
            android:id="@+id/et_user_name"
            style="@style/loginEditStyle"
            android:hint="@string/user_name_placeholder"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et_password"
            style="@style/loginEditStyle"
            android:hint="@string/password_placeholder"
            android:maxLines="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <CheckBox
                android:id="@+id/cb_auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_login" />

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/forget_password" />
        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_button_login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_register"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_avatar"
            android:text="@string/retrieve_password"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            style="@style/loginEditStyle"
            android:layout_marginTop="20dp"
            android:hint="@string/email_placeholder" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_button_login"
            android:minHeight="0dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_login"
            android:minHeight="0dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/tip_forget_password"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="italic" />
    </LinearLayout>

</RelativeLayout>
